# wejc

./: .dockerignore  .env.example  .gitignore  00_AI总规则手册.md  01_系统蓝图与边界.md  02_架构与目录规范.md  03_数据库与领域模型规范.md  04_API与服务层规范.md  05_模块开发顺序与任务地图.md  06_AI任务模板与提示词库.md  07_验收标准与自检清单.md  08_禁止事项与跑偏纠正手册.md  09_页面蓝图与前后端协作规范.md  10_ERP与第三方接入规范.md  11_测试日志部署规范.md  12_完整开发里程碑.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  prompt_presets.json  pyproject.toml  商家后台模块设计.md  平台后台模块设计.md  系统完整开发里程.md
admin-web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
admin-web/src/: App.vue  App.vue.js  api.js  api.ts  main.js  main.ts  styles.css  types.ts
alembic/: env.py  script.py.mako
alembic/versions/: 20260312_091900_init_tenant_shop.py  20260312_101500_add_product_domain.py  20260312_113000_add_order_domain.py  20260312_123000_add_integration_push_log.py  20260314_160500_add_platform_admin.py  20260314_181500_add_platform_audit_log.py  20260315_103000_add_shop_theme.py  (+1 more)
app/: main.py
deploy/: env.production.example
docs/: API.md  DEPLOYMENT.md  TESTING.md
scripts/: deploy_manual.sh  seed_demo_data.py  start.bat  start.ps1  start.sh
tests/: conftest.py  test_admin_page.py  test_health.py  test_merchant_console.py  test_merchant_push.py  test_merchant_theme.py  test_order_flow.py  test_order_push.py  test_platform_admin.py  test_product_sync.py  test_regressions.py  test_store_context.py  test_store_product.py  test_store_resolve.py
wejc-ww/: package-lock.json  package.json  project.config.json
(+116 files in other folders)
